--- a/wikimedia-commons-potd-login.css
+++ b/wikimedia-commons-potd-login.css
@@ -7,3 +7,7 @@ body.login #nav {
   -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
   box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 }
+body.login {
+  background-size: cover;
+  background-position: center;
+}
